# stack-check

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  stack_check.cpp  stack_check.h  stack_check_clang.cpp  stack_check_clang.h  stack_check_plugin.h  stack_info.cpp  stack_info.h  stack_usage.sh  test.cpp
plugin/: CMakeLists.txt  stack_check_clang.cpp  stack_check_plugin.h  stack_info.cpp
test/: CMakeLists.txt  apply_attr.cpp  attr.cpp  example.cpp  frame_test.cpp  inject.cpp  lit.site.cfg.py  macros.cpp  prime_check.cpp  recursion.cpp  speed_test.cpp  stack_check_test.cpp  stack_info_test.cpp  stack_sizes.cpp  unit2_test.cpp  unit_test.cpp
